[NS-29] Fix events spacing

--- a/src/scss/components/event-page.scss
+++ b/src/scss/components/event-page.scss
@@ -22,16 +22,19 @@
     display: block;
     width: 100%;
 
-    margin-top: 8px;
+    margin-top: 24px;
     background-color: $color-pearl;
 
     border-radius: 5px;
+
+    transition: background-color 0.3s;
 
     &:active, &:hover {
         background-color: $color-light-blue;
     }
 
     @media (max-width: $bp-sm-min) {
+        margin-top: 8px;
         padding: 16px 12px;
     }
 
